--- a/Quizz-App-IOS-Swift/Base.lproj/LaunchScreen.storyboard
+++ b/Quizz-App-IOS-Swift/Base.lproj/LaunchScreen.storyboard
@@ -1,39 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Balham.otf">
+            <string>Balham</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loading" translatesAutoresizingMaskIntoConstraints="NO" id="xma-I9-hf8">
-                                <rect key="frame" x="86.666666666666686" y="223" width="241" height="290"/>
+                                <rect key="frame" x="391.5" y="538" width="241" height="290"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="xma-I9-hf8" secondAttribute="height" multiplier="241:290" id="gfj-sm-t03"/>
                                     <constraint firstAttribute="width" constant="241" id="yQv-RT-yLz"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mehdi Benrefad Presente" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQ7-vA-6cD">
+                                <rect key="frame" x="376.5" y="20" width="271" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="G9e-vk-pPY"/>
+                                    <constraint firstAttribute="width" constant="271" id="Lye-ry-5Gc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" red="0.7834928632" green="0.92663544419999999" blue="0.62643712760000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version iPad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dh8-UU-yXe">
+                                <rect key="frame" x="443" y="1261" width="138" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="138" id="9QB-ci-EOI"/>
+                                    <constraint firstAttribute="height" constant="65" id="LO8-pw-gV8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Balham" family="Balham" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9QB-ci-EOI"/>
+                                        <exclude reference="LO8-pw-gV8"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="9QB-ci-EOI"/>
+                                        <include reference="LO8-pw-gV8"/>
+                                    </mask>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.34322530029999998" green="0.41797602179999999" blue="0.51009660960000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dh8-UU-yXe" secondAttribute="bottom" constant="20" id="8Oc-uB-ipW"/>
+                            <constraint firstItem="sQ7-vA-6cD" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9oX-do-u2D"/>
                             <constraint firstItem="xma-I9-hf8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MTl-2R-ue5"/>
                             <constraint firstItem="xma-I9-hf8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="TNG-Lu-0Sr"/>
+                            <constraint firstItem="dh8-UU-yXe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VPy-Tb-kRA"/>
+                            <constraint firstItem="sQ7-vA-6cD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Wmj-0b-mkm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="dh8-UU-yXe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="8Oc-uB-ipW"/>
+                                <exclude reference="VPy-Tb-kRA"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="subviews">
+                                <include reference="dh8-UU-yXe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="8Oc-uB-ipW"/>
+                                <include reference="VPy-Tb-kRA"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="50.399999999999999" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
